--- a/index.html
+++ b/index.html
@@ -5,17 +5,78 @@
 <body>
 </body>
 <script>
+    var condition = "";
     function computerPlay() {
         let guess = Math.floor(Math.random() * 3 + 1);
         if (guess === 1) {
-            return "rock"
+            return "Rock"
         }
         else if (guess === 2) {
-            return "paper"
+            return "Paper"
         }
         else if (guess === 3) {
-            return "scissors"
-        }
-             
+            return "Scissors"
+        }             
     }
+    
+    function singleRound(){
+        let playerSelection = prompt("Rock... Paper... Scissors... Shoot!");
+        if (playerSelection == "") {
+            return "ok"
+        }
+        playerSelection = playerSelection.toLowerCase();
+        playerSelection = playerSelection[0].toUpperCase() + playerSelection.slice(1);
+        var computerSelection = computerPlay();
+        let proof = "";
+
+        if ((computerSelection === "Rock") && (playerSelection === "Scissors") || (computerSelection === "Paper") && (playerSelection === "Rock") || (computerSelection === "Scissors") && (playerSelection === "Paper")) {
+            condition = "Lose";
+            proof = `${computerSelection} beats ${playerSelection}`
+        }
+        else if ((computerSelection === "Scissors") && (playerSelection === "Rock") || (computerSelection === "Rock") && (playerSelection === "Paper") || (computerSelection === "Paper") && (playerSelection === "Scissors")) {
+            condition = "Win";
+            proof = `${playerSelection} beats ${computerSelection}`
+        }
+        else {
+            condition = "Tie";
+            return `Tie! Your Guess: ${playerSelection} - Computer Guess: ${computerSelection}. Lets play again!`
+        }
+
+        return `You ${condition}! ${proof}. Let's play again!`
+}
+
+    function game() {
+        let playerSelection = "";
+        while (playerSelection != "q") {
+            let playerScore = 0;
+            let computerScore = 0;
+            playerSelection = prompt("Rock Paper Scissors! To play a game, type 'play'. To quit, enter 'q'.");
+            if (playerSelection == "play") {
+                prompt("Ok - Best out of 5! Ready?", "Click OK!");
+                while ((playerScore < 3) || (computerScore < 3)) {
+                    singleRound();
+                    if (condition == "Win") {
+                        playerScore++;
+                    }
+                    else if (condition == "Lose") {
+                        computerScore++;                        
+                    }
+                }
+                if (playerScore > computerScore) {
+                    prompt(`You won the game! ${playerScore} to ${computerScore}`);
+                }
+                else {
+                    prompt(`You lost the game! ${computerScore} to ${playerScore}`);
+                }
+            }
+        }
+    }
+
+
+/*else if ((computerSelection === "paper") && (playerSelection === "rock")) {
+            return "You Lose! Paper covers Rock!"
+        }
+        else if ((computerSelection === "scissors") && (playerSelection === "paper")) {
+            return "You Lose! Scissors cuts Paper!"
+        }*/
 </script>
